i have learnt dev tools

--- a/developerTools.html
+++ b/developerTools.html
@@ -9,6 +9,7 @@
             color: purple;
             font-style: italic;
             background-color: rosybrown;
+            background-color: #9c7d7d;
         }
     </style>
 </head>
