added fonts web

--- a/fonts.html
+++ b/fonts.html
@@ -25,11 +25,11 @@
             font-weight: bold;
             font-style: italic;
         }
-
     </style>
 </head>
 <body>
     <h3>Css Fonts</h3>
     <p>Knowing <span>about </span> fonts</p>
+    <!-- fonts.google.com is web to use fonts -->
 </body>
 </html>
